# potatosync-files

./: .gitignore  Cargo.toml  Rocket.toml  amd64.Dockerfile  arm.Dockerfile
.github/workflows/: docker.yml
src/: auth.rs  db.rs  introspect_response.rs  main.rs  token.rs
