[package]
name = "potatosync-files"
version = "0.1.0"
authors = ["broodroosterdev <myth.usa538@gmail.com>"]
edition = "2018"
[[bin]]
path = "src/main.rs"
name = "potatosync-files"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rust-s3 = {version = "0.22.12", features = ["rustls-tls"]}
serde = "1.0"
serde_json = "*"
serde_derive = "*"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
rocket_cors = "0.5.2"
