[package]
name = "potatosync-files"
version = "0.1.0"
authors = ["broodroosterdev <myth.usa538@gmail.com>"]
edition = "2018"
[[bin]]
path = "src/main.rs"
name = "potatosync-files"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5"
actix-multipart = "0.3"
actix-files = "0.5"
actix-web-httpauth = "0.5.1"
alcoholic_jwt = "1.0.1"
reqwest = "0.9.22"
base64 = "0.13.0"
futures-util = "0.3.8"
serde = "1.0"
serde_json = "*"
serde_derive = "*"
dotenv = "0.15.0"
derive_more = "0.99.17"
